--- a/resources/testweb/creator_pieces.html
+++ b/resources/testweb/creator_pieces.html
@@ -245,7 +245,7 @@
         </table>
 
       </div>
-      <div class="panel-footer">
+      <div class="panel-footer pager-footer">
         <ul class="pager">
           <li id="pieces_issued_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
           <li id="pieces_issued_pager_next" ><a href="javascript:void(0);">Next</a></li>
@@ -289,7 +289,7 @@
         </table>
 
       </div>
-      <div class="panel-footer">
+      <div class="panel-footer pager-footer">
         <ul class="pager">
           <li id="backers_current_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
           <li id="backers_current_pager_next" ><a href="javascript:void(0);">Next</a></li>
