--- a/resources/testweb/creator_rewards.html
+++ b/resources/testweb/creator_rewards.html
@@ -228,7 +228,7 @@
         </table>
 
       </div>
-      <div class="panel-footer">
+      <div class="panel-footer pager-footer">
         <ul class="pager">
           <li id="rewards_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
           <li id="rewards_pager_next" ><a href="javascript:void(0);">Next</a></li>
