--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -200,7 +200,7 @@
               </script>
 
             </div>
-            <div class="panel-footer">
+            <div class="panel-footer pager-footer">
               <ul class="pager">
                 <li id="discover_creators_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
                 <li id="discover_creators_pager_next" ><a href="javascript:void(0);">Next</a></li>
