--- a/resources/testweb/userdashboard_overview.html
+++ b/resources/testweb/userdashboard_overview.html
@@ -360,7 +360,7 @@
             </table>
 
           </div>
-          <div class="panel-footer">
+          <div class="panel-footer pager-footer">
             <ul class="pager">
               <li id="recent_activity_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
               <li id="recent_activity_pager_next" ><a href="javascript:void(0);">Next</a></li>
