--- a/resources/testweb/creator_funds.html
+++ b/resources/testweb/creator_funds.html
@@ -251,7 +251,7 @@
         </table>
 
       </div>
-      <div class="panel-footer">
+      <div class="panel-footer pager-footer">
         <ul class="pager">
           <li id="creators_transactions_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
           <li id="creators_transactions_pager_next" ><a href="javascript:void(0);">Next</a></li>
