--- a/resources/testweb/userdashboard_funds.html
+++ b/resources/testweb/userdashboard_funds.html
@@ -203,7 +203,7 @@
               </table>
 
             </div>
-            <div class="panel-footer">
+            <div class="panel-footer pager-footer">
               <ul class="pager">
                 <li id="transactions_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
                 <li id="transactions_pager_next" ><a href="javascript:void(0);">Next</a></li>
