--- a/resources/testweb/creator_overview.html
+++ b/resources/testweb/creator_overview.html
@@ -242,7 +242,7 @@
 
 
         </div>
-        <div class="panel-footer">
+        <div class="panel-footer pager-footer">
           <ul class="pager">
             <li id="creators_activity_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
             <li id="creators_activity_pager_next" ><a href="javascript:void(0);">Next</a></li>
@@ -319,7 +319,7 @@
           </table>
 
         </div>
-        <div class="panel-footer">
+        <div class="panel-footer pager-footer">
           <ul class="pager">
             <li id="bids_asks_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
             <li id="bids_asks_pager_next" ><a href="javascript:void(0);">Next</a></li>
