--- a/resources/uncommon.html
+++ b/resources/uncommon.html
@@ -3,6 +3,11 @@
 
 Real version
 -------------
+favicon : 
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="https://bitpieces.com/favicon.ico" type="image/x-icon" />
+
+
 htaccess
 
 
