--- a/resources/web/creator_rewards.html
+++ b/resources/web/creator_rewards.html
@@ -10,10 +10,10 @@
 	<title>Bitpieces</title>
 
     <!-- favicon -->
-  <link rel="shortcut icon" href="https://bitpieces.com/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
 	<!-- Bootstrap core CSS -->
-	<link href="darkly.bootstrap.min.css" rel="stylesheet">
+	<link href="united.bootstrap.css" rel="stylesheet">
 
 	<!-- Link to font awesome -->
 	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
@@ -93,7 +93,7 @@
               <div class="form-group">
                <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
              </div>
-             <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+             <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
            </form>
 
 
@@ -135,11 +135,11 @@
          <span class="badge" id="slide-submenu"><i class="fa fa-times"></i></span>
        </li>
        <a class="list-group-item" href="/creators/main" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Main</a>
-       <a class="list-group-item" href="/creators/pricing" rel="keep-params"><i class="fa fa-dollar"></i> Price</a>
+       <a class="list-group-item" href="/creators/pricing" rel="keep-params"><i class="fa fa-money"></i> Price</a>
        <a class="list-group-item" href="/creators/worth" rel="keep-params"><i class="fa fa-building-o"></i> Worth</a>
        <a class="list-group-item active" href="/creators/rewards" rel="keep-params"><i class="fa fa-trophy"></i> Rewards</a>
        <a class="list-group-item" href="/creators/funds" rel="keep-params"><i class="fa fa-bank"></i> Funds</a>
-       <a class="list-group-item" href="/creators/pieces" rel="keep-params"><i class="fa fa-puzzle-piece"></i> Pieces</a>
+       <a class="list-group-item" href="/creators/pieces" rel="keep-params"><i class="fa fa-cubes"></i> Pieces</a>
        
      </div>
    </div>        
@@ -172,13 +172,13 @@
       </div>
       <div class="col-md-6">
         <div class="col-md-12">
-          <button id="askBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#askModal">Ask</button>
-          <button id="bidBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#bidModal">Bid</button>
-          <button id="buyBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#buyModal">Buy</button>
-          <button id="raiseFundsBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#raiseFundsModal">Raise funds</button>
-          <button id="issueBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#issueModal">Issue Pieces</button>
-          <button id="changeRewardBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#rewardModal">Change Reward</button>
-          <button id="withdrawBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#withdrawModal">Withdraw</button>
+          <button id="askBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#askModal">Ask</button>
+          <button id="bidBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#bidModal">Bid</button>
+          <button id="buyBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#buyModal">Buy</button>
+          <button id="raiseFundsBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#raiseFundsModal">Raise funds</button>
+          <button id="issueBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#issueModal">Issue Pieces</button>
+          <button id="changeRewardBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#rewardModal">Change Reward</button>
+          <button id="withdrawBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#withdrawModal">Withdraw</button>
 
 
        </div>
@@ -203,7 +203,7 @@
       <div class="panel-heading">
         <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Rewards</h3>
       </div>
-      <div id="rewards" class="panel-body" style="height: 276px;overflow:auto;">
+      <div id="rewards" class="panel-body small-table">
         <script id="rewards_template" type="x-tmpl-mustache"> 
           <table id="rewards_table" class="table table-hover table-striped tablesorter">
             <thead> 
@@ -228,7 +228,7 @@
         </table>
 
       </div>
-      <div class="panel-footer">
+      <div class="panel-footer pager-footer">
         <ul class="pager">
           <li id="rewards_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
           <li id="rewards_pager_next" ><a href="javascript:void(0);">Next</a></li>
@@ -237,41 +237,13 @@
     </div>
   </div>
 
-  <div class="col-md-6">
+ <div class="col-md-6">
     <div class="panel panel-primary">
       <div class="panel-heading">
         <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Rewards paid to users</h3>
       </div>
-      <div id="rewards_owed_to_user" class="panel-body" style="height: 276px;overflow:auto;">
-        <script id="rewards_owed_to_user_template" type="x-tmpl-mustache"> 
-          <table id="rewards_owed_to_user_table" class="table table-hover table-striped tablesorter">
-            <thead> 
-              <tr>
-                <th>Owner <i class="fa fa-sort"></i></th>
-                <th>Total Paid <i class="fa fa-sort"></th>
-              </tr>
-            </thead>
-
-            <tbody>
-
-              {{#.}}
-
-              <tr> 
-                <td><a href="/users/overview/{{owners_name}}">{{owners_name}}</a></td>
-                <td>{{total_owed}}</td>
-              </tr>
-              {{/.}}
-
-            </tbody>
-          </script>
-        </table>
-
-      </div>
-      <div class="panel-footer">
-        <ul class="pager">
-          <li id="rewards_owed_to_user_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
-          <li id="rewards_owed_to_user_pager_next" ><a href="javascript:void(0);">Next</a></li>
-        </ul>
+      <div class="panel-body">
+        <div class = "small-chart" id="rewards_owed_to_users"></div>
       </div>
     </div>
   </div>
@@ -780,7 +752,6 @@
       <script src="tablesorter/jquery.tablesorter.js"></script> 
       <script src="highcharts/js/highcharts.js"></script>
       <script src="highcharts/js//modules/exporting.js"></script>
-      <script src="highcharts/js/themes/dark-unica.js"></script>
       <script src="typeahead.js/typeahead.bundle.js"></script>
       <script src="pickadate/lib/picker.js"></script>
       <script src="pickadate/lib/picker.date.js"></script>
