--- a/resources/web/creatordashboard.html
+++ b/resources/web/creatordashboard.html
@@ -11,10 +11,10 @@
   <title>Bitpieces</title>
 
   <!-- favicon -->
-  <link rel="shortcut icon" href="https://bitpieces.com/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
   <!-- Bootstrap core CSS -->
-  <link href="darkly.bootstrap.min.css" rel="stylesheet">
+  <link href="united.bootstrap.css" rel="stylesheet">
 
   <!-- Link to font awesome -->
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
@@ -149,8 +149,8 @@
     </div>
   </div>
 
-  <button id="helloBtn" type="button" class="btn btn-default">Hello!</button>
-  <button id="piecesownedtotalBtn" type="button" class="btn btn-default">Pieces Owned Total</button>
+  <button id="helloBtn" type="button" class="btn btn-primary">Hello!</button>
+  <button id="piecesownedtotalBtn" type="button" class="btn btn-primary">Pieces Owned Total</button>
   <div id="piecesownedDiv">Loading...
     <script id="piecesownedTemplate" type="x-tmpl-mustache">
       pieces owned 
