--- a/resources/web/creatordashboardcustomize.html
+++ b/resources/web/creatordashboardcustomize.html
@@ -11,10 +11,10 @@
   <title>Bitpieces</title>
 
   <!-- favicon -->
-  <link rel="shortcut icon" href="https://bitpieces.com/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
   <!-- Bootstrap core CSS -->
-  <link href="darkly.bootstrap.min.css" rel="stylesheet">
+  <link href="united.bootstrap.css" rel="stylesheet">
 
   <!-- Link to font awesome -->
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
@@ -143,7 +143,7 @@
  
         <!-- <div class="form-group"> -->
         <div class="col-sm-offset-2 col-sm-10">
-          <button id="saveBtn" type="submit" class="btn btn-default">Save</button>
+          <button id="saveBtn" type="submit" class="btn btn-primary">Save</button>
         </div>
       </div>
       <!-- </form> -->
