--- a/resources/web/discover.html
+++ b/resources/web/discover.html
@@ -11,10 +11,10 @@
   <title>Bitpieces</title>
 
   <!-- favicon -->
-  <link rel="shortcut icon" href="https://bitpieces.com/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
   <!-- Bootstrap core CSS -->
-  <link href="darkly.bootstrap.min.css" rel="stylesheet">
+  <link href="united.bootstrap.css" rel="stylesheet">
 
   <!-- Link to font awesome -->
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
@@ -88,7 +88,7 @@
               <div class="form-group">
                <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
              </div>
-             <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+             <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
            </form>
 
 
@@ -200,7 +200,7 @@
               </script>
 
             </div>
-            <div class="panel-footer">
+            <div class="panel-footer pager-footer">
               <ul class="pager">
                 <li id="discover_creators_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
                 <li id="discover_creators_pager_next" ><a href="javascript:void(0);">Next</a></li>
@@ -231,7 +231,6 @@
       <script src="tablesorter/jquery.tablesorter.js"></script> 
       <script src="highcharts/js/highcharts.js"></script>
       <script src="highcharts/js//modules/exporting.js"></script>
-      <script src="highcharts/js/themes/dark-unica.js"></script>
       <script src="typeahead.js/typeahead.bundle.js"></script>
 
       <!-- my scripts -->
