--- a/resources/web/landing.html
+++ b/resources/web/landing.html
@@ -12,10 +12,10 @@
   <title>Bitpieces</title>
 
   <!-- favicon -->
-  <link rel="shortcut icon" href="https://bitpieces.com/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
   <!-- Bootstrap core CSS -->
-  <link href="darkly.bootstrap.min.css" rel="stylesheet">
+  <link href="united.bootstrap.css" rel="stylesheet">
 
   <!-- Link to font awesome -->
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
@@ -67,7 +67,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
      <ul class="nav navbar-nav">
-      <li><a href="/">Home</a></li>
+      <li class="active"><a href="/">Home</a></li>
       <li><a href="/discover">Discover</a></li>
       <li><a href="/creators_register">Creators</a></li> 
       <li><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
@@ -86,7 +86,7 @@
       <div class="form-group">
        <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
      </div>
-     <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+     <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
    </form>
 
 
@@ -124,7 +124,8 @@
         <div class="carousel-inner">
           <div class="item active">
             <div class="900-image" align="center">
-              <img class="img-responsive center-block" src="img/market-practices-3.jpg" alt="First slide">
+              <!-- <img src="img/market-practices.jpg" alt="First slide"> -->
+              <div style="width:100%; height: 400px; background: url('img/market-practices.jpg')  no-repeat center top transparent;">&nbsp;</div>
             </div>
             <div class="container">
               <div class="carousel-caption">
@@ -137,7 +138,8 @@
             </div>
             <div class="item">
               <div class="900-image" align="center">
-                <img class="img-responsive center-block" src="img/500xaaa4752463128_9a43bfb383_o.jpg"alt="Second slide">
+               <!--  <img src="img/group.jpg"alt="Second slide"> -->
+                <div style="width:100%; height: 400px; background: url('img/group.jpg') no-repeat center 15% transparent;">&nbsp;</div>
               </div>
               <div class="container">
                 <div class="carousel-caption">
@@ -149,7 +151,8 @@
             </div>
             <div class="item">
               <div class="900-image" align="center">
-                <img class="img-responsive center-block" src="img/500x1065025171_d7ed482beb_o.jpg" alt="Third slide">
+                <!-- <img src="img/group3.jpg" alt="Third slide"> -->
+                <div style="width:100%; height: 400px; background: url('img/group3.jpg') no-repeat center 15% transparent;">&nbsp;</div>
               </div>
               <div class="container">
                 <div class="carousel-caption">
@@ -210,13 +213,13 @@
           </div><!-- /.row -->
           <div class="row">
             <div class="col-lg-4">
-             <p><a class="btn btn-default" href="#" role="button" data-toggle="modal" data-target="#userloginModal" role="button">Sign up &raquo;</a></p>
+             <p><a class="btn btn-primary" href="#" role="button" data-toggle="modal" data-target="#userloginModal" role="button">Sign up &raquo;</a></p>
             </div>
             <div class="col-lg-4">
-            <p><a class="btn btn-default" href="FAQ#what_are_pieces" role="button">Learn more about pieces &raquo;</a></p>
+            <p><a class="btn btn-primary" href="FAQ#what_are_pieces" role="button">Learn more about pieces &raquo;</a></p>
             </div>
             <div class="col-lg-4">
-            <p><a class="btn btn-default" href="FAQ#what_are_rewards" role="button">Learn more about rewards &raquo;</a></p>
+            <p><a class="btn btn-primary" href="FAQ#what_are_rewards" role="button">Learn more about rewards &raquo;</a></p>
             </div>
           </div>
 
@@ -232,7 +235,7 @@
 
           <div id="fund_creativity" class="row featurette">
             <div class="col-md-5">
-              <img class="featurette-image img-responsive" src="img/500x3583394219_2323ff7be1_o.jpg" alt="Generic placeholder image">
+              <img class="featurette-image img-responsive" src="img/group2square.jpg" alt="Generic placeholder image">
             </div>
             <div class="col-md-7">
               <h2 class="featurette-heading">Fund <span class="text-muted">creativity </span></h2>
@@ -250,7 +253,7 @@
               </p>
             </div>
             <div class="col-md-5">
-              <img class="featurette-image img-responsive" src="img/500x500_10306525406_fa5566482f_o.jpg" alt="Generic placeholder image">
+              <img class="featurette-image img-responsive" src="img/btc1.jpg" alt="Generic placeholder image">
             </div>
           </div>
 
@@ -258,7 +261,7 @@
 
           <div class="row featurette">
             <div class="col-md-5">
-              <img class="featurette-image img-responsive" src="img/500x13177007423_b8d330a42a_k.jpg" alt="Generic placeholder image">
+              <img class="featurette-image img-responsive" src="img/guitarists.jpg" alt="Generic placeholder image">
             </div>
             <div class="col-md-7">
               <h2 class="featurette-heading">Zero fees on a <span class="text-muted">secure platform </span></h2>
@@ -276,7 +279,7 @@
 
             </div>
             <div class="col-md-5">
-              <img class="featurette-image img-responsive" src="img/500x13805644585_63b1b832d4_k.jpg" alt="Generic placeholder image">
+              <img class="featurette-image img-responsive" src="img/comics.jpg" alt="Generic placeholder image">
             </div>
           </div>
 
@@ -552,7 +555,7 @@
 
     </div> 
     <div class="modal-footer">
-     <button type="button" class="btn btn-default" data-dismiss="modal">Okay, I accept</button>
+     <button type="button" class="btn btn-primary" data-dismiss="modal">Okay, I accept</button>
    </div>
 
    </div>
@@ -630,7 +633,6 @@
       <script src="tablesorter/jquery.tablesorter.js"></script> 
       <script src="highcharts/js/highcharts.js"></script>
       <script src="highcharts/js//modules/exporting.js"></script>
-      <script src="highcharts/js/themes/dark-unica.js"></script>
       <script src="typeahead.js/typeahead.bundle.js"></script>
       <script type="text/javascript" src="https://www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script>
       
