--- a/resources/web/userdashboard_funds.html
+++ b/resources/web/userdashboard_funds.html
@@ -11,10 +11,10 @@
   <title>Bitpieces</title>
 
   <!-- favicon -->
-  <link rel="shortcut icon" href="https://bitpieces.com/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
   <!-- Bootstrap core CSS -->
-  <link href="darkly.bootstrap.min.css" rel="stylesheet">
+  <link href="united.bootstrap.css" rel="stylesheet">
 
   <!-- Link to font awesome -->
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
@@ -88,7 +88,7 @@
               <div class="form-group">
                <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
              </div>
-             <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+             <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
            </form>
 
 
@@ -134,7 +134,7 @@
           </li>
 
           <a class="list-group-item active" href="/users/funds" rel="keep-params"><i class="fa fa-bank"></i> Funds</a>
-          <a class="list-group-item" href="/users/pieces" rel="keep-params"><i class="fa fa-puzzle-piece"></i> Pieces</a>
+          <a class="list-group-item" href="/users/pieces" rel="keep-params"><i class="fa fa-cubes"></i> Pieces</a>
           <a class="list-group-item" href="/users/prices" rel="keep-params"><i class="fa fa-dollar"></i> Prices</a>
         </div>
       </div>        
@@ -172,7 +172,7 @@
             <div class="panel-heading">
               <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Transactions</h3>
             </div>
-            <div id="transactions" class="panel-body" style="height: 276px;overflow:auto;">
+            <div id="transactions" class="panel-body small-table">
               <script id="transactions_template" type="x-tmpl-mustache"> 
                 <table id="transactions_table" class="table table-hover table-striped tablesorter">
                   <thead> 
@@ -203,7 +203,7 @@
               </table>
 
             </div>
-            <div class="panel-footer">
+            <div class="panel-footer pager-footer">
               <ul class="pager">
                 <li id="transactions_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
                 <li id="transactions_pager_next" ><a href="javascript:void(0);">Next</a></li>
@@ -239,7 +239,6 @@
       <script src="holder/holder.js"></script>
       <script src="highcharts/js/highcharts.js"></script>
       <script src="highcharts/js//modules/exporting.js"></script>
-      <script src="highcharts/js/themes/dark-unica.js"></script>
       <script src="json.date-extensions.js"></script>
       <script src="tablesorter/jquery.tablesorter.js"></script> 
       <script src="typeahead.js/typeahead.bundle.js"></script>
