--- a/resources/web/userdashboard_overview.html
+++ b/resources/web/userdashboard_overview.html
@@ -11,10 +11,10 @@
   <title>Bitpieces</title>
 
   <!-- favicon -->
-  <link rel="shortcut icon" href="https://bitpieces.com/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
   <!-- Bootstrap core CSS -->
-  <link href="darkly.bootstrap.min.css" rel="stylesheet">
+  <link href="united.bootstrap.css" rel="stylesheet">
 
   <!-- Link to font awesome -->
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
@@ -88,7 +88,7 @@
               <div class="form-group">
                <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
              </div>
-             <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+             <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
            </form>
 
 
@@ -134,7 +134,7 @@
           </li>
 
           <a class="list-group-item" href="/users/funds" rel="keep-params"><i class="fa fa-bank"></i> Funds</a>
-          <a class="list-group-item" href="/users/pieces" rel="keep-params"><i class="fa fa-puzzle-piece"></i> Pieces</a>
+          <a class="list-group-item" href="/users/pieces" rel="keep-params"><i class="fa fa-cubes"></i> Pieces</a>
           <a class="list-group-item" href="/users/prices" rel="keep-params"><i class="fa fa-dollar"></i> Prices</a>
         </div>
       </div>        
@@ -165,8 +165,8 @@
           <h1> <span id="page_title"></span> <small> overview</small> </h1> 
         </div>
         <div class="col-md-6">
-          <button id="depositBtn" type="button" class="btn btn-default btn-lg pull-right hide" data-toggle="modal" data-target="#depositModal">Deposit</button>
-          <button id="withdrawBtn" type="button" class="btn btn-default btn-lg pull-right hide" data-toggle="modal" data-target="#withdrawModal">Withdraw</button>
+          <button id="depositBtn" type="button" class="btn btn-primary btn-lg pull-right hide" data-toggle="modal" data-target="#depositModal">Deposit</button>
+          <button id="withdrawBtn" type="button" class="btn btn-primary btn-lg pull-right hide" data-toggle="modal" data-target="#withdrawModal">Withdraw</button>
 
         </div>
       </div>
@@ -329,7 +329,7 @@
           <div class="panel-heading">
             <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Recent Activity</h3>
           </div>
-          <div id="recent_activity" class="panel-body" style="height: 276px;overflow:auto;">
+          <div id="recent_activity" class="panel-body small-table">
             <script id="recent_activity_template" type="x-tmpl-mustache"> 
               <table id="recent_activity_table" class="table table-hover table-striped tablesorter">
                 <thead> 
@@ -360,7 +360,7 @@
             </table>
 
           </div>
-          <div class="panel-footer">
+          <div class="panel-footer pager-footer">
             <ul class="pager">
               <li id="recent_activity_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
               <li id="recent_activity_pager_next" ><a href="javascript:void(0);">Next</a></li>
@@ -473,7 +473,6 @@
       </div>
       <div class="modal-body">
         <form id="withdrawForm" class="form-horizontal" role="form">
-          
           <div class="form-group form-group-lg">
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Amount</label>
             <div class="col-sm-10">
@@ -496,7 +495,7 @@
 
 
            <div class="col-sm-10">
-             <input name="address" type="text" class="form-control" placeholder="Bitcoin Address or Coinbase Email"
+             <input name="address" type="text" class="form-control" disabled placeholder="Bitcoin Address or Coinbase Email"
              >
            </div>
          </div>
@@ -540,7 +539,6 @@
       <script src="tablesorter/jquery.tablesorter.js"></script> 
       <script src="highcharts/js/highcharts.js"></script>
       <script src="highcharts/js//modules/exporting.js"></script>
-      <script src="highcharts/js/themes/dark-unica.js"></script>
       <script src="typeahead.js/typeahead.bundle.js"></script>
       <script type="text/javascript" src="https://www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script>
 
