--- a/resources/web/userdashboard_prices.html
+++ b/resources/web/userdashboard_prices.html
@@ -11,10 +11,10 @@
   <title>Bitpieces</title>
 
   <!-- favicon -->
-  <link rel="shortcut icon" href="https://bitpieces.com/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
   <!-- Bootstrap core CSS -->
-  <link href="darkly.bootstrap.min.css" rel="stylesheet">
+  <link href="united.bootstrap.css" rel="stylesheet">
 
   <!-- Link to font awesome -->
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
@@ -88,7 +88,7 @@
               <div class="form-group">
                <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
              </div>
-             <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+             <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
            </form>
 
 
@@ -134,7 +134,7 @@
           </li>
 
           <a class="list-group-item" href="/users/funds" rel="keep-params"><i class="fa fa-bank"></i> Funds</a>
-          <a class="list-group-item" href="/users/pieces" rel="keep-params"><i class="fa fa-puzzle-piece"></i> Pieces</a>
+          <a class="list-group-item" href="/users/pieces" rel="keep-params"><i class="fa fa-cubes"></i> Pieces</a>
           <a class="list-group-item active" href="/users/prices" rel="keep-params"><i class="fa fa-dollar"></i> Prices</a>
         </div>
       </div>        
@@ -194,7 +194,6 @@
       <script src="holder/holder.js"></script>
       <script src="highcharts/js/highcharts.js"></script>
       <script src="highcharts/js//modules/exporting.js"></script>
-      <script src="highcharts/js/themes/dark-unica.js"></script>
       <script src="typeahead.js/typeahead.bundle.js"></script>
        <script type="text/javascript" src="https://www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script>
 
