--- a/resources/uncommon.html
+++ b/resources/uncommon.html
@@ -3,6 +3,9 @@
 
 Real version
 -------------
+change tools.js
+var sparkService = "https://bitpieces.com:4567/"
+
 favicon : 
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 <link rel="shortcut icon" href="https://bitpieces.com/favicon.ico" type="image/x-icon" />
