--- a/resources/uncommon.html
+++ b/resources/uncommon.html
@@ -5,6 +5,7 @@ Real version
 -------------
 change tools.js
 var sparkService = "https://bitpieces.com:4567/"
+var cookie_path_name = "prod";
 
 favicon : 
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
