--- a/resources/uncommon.html
+++ b/resources/uncommon.html
@@ -193,7 +193,7 @@ Creator pages
 </div>
 
 
-The user withdrawal, remove the line that says its fake
+The user withdrawal, remove the line that says its fake, and disabled
 
 Fake version
 -----------
