--- a/resources/web/FAQ.html
+++ b/resources/web/FAQ.html
@@ -187,7 +187,7 @@
         <div id="what_is_a_creator">   
           <h2 class="">What is a creator?</h2>
           A creator is the term Bitpieces uses to refer to the content-creators who 
-          are issuing pieces to raise funds. A creator is not a project; it is a <b>brand</b>, which could potentially run many projects. A creator can refer to a single person, a group of people, or a company trying to raise money.
+          are issuing pieces to raise funds. A creator is not a project; it is a <b>brand</b>, which could potentially run many projects. A creator can refer to a single person, a group of people, or a company trying to raise money. You can click <a href="/discover">discover</a> at the top of the page, to see some sample creators.
           <hr class="col-md-12">
         </div>
         <div id="what_are_rewards">
@@ -375,7 +375,7 @@
             For funders of projects, Bitpieces is completely free. Bitpieces uses 
             <a href="https://coinbase.com/">Coinbase</a> as a payment processor,
             which currently has zero fees for Bitpieces transactions. When not using coinbase,
-            you will incur a .0001-.0002 BTC transaction fee when you first buy pieces. Buying the initial pieces, or issuing bids
+            you may incur a .0001-.0002 BTC transaction fee when you first buy pieces, from your own personal bitcoin wallet. Buying the initial pieces, or issuing bids
             and asks is a zero-fee process. Withdrawals, after selling pieces, are also entirely free.
 
             <br><br>
