--- a/resources/web/creator_worth.html
+++ b/resources/web/creator_worth.html
@@ -214,7 +214,7 @@
  <hr class="featurette-divider">
      <footer>
       <p class="pull-right"><a href="#">Back to top</a></p>
-      <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="about">About</a> &middot; <a href="contact">Contact</a>
+      <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="/about">About</a> &middot; <a href="/contact">Contact</a>
       &middot; <a href="/FAQ">Support</a> &middot; <a href="https://github.com/tchoulihan/bitpieces">Github</a></p>
       </footer>
   
