starting to add login modal to every page

--- a/resources/testweb/creator_funds.html
+++ b/resources/testweb/creator_funds.html
@@ -902,6 +902,7 @@
       <script src="creatorpage.js"></script>
       <script src="creator_funds.js"></script>
       <script src="common.js"></script>
+<script src="login.js"></script>
 
 
     </body>
