--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -1031,6 +1031,7 @@
       <script src="creatorpage.js"></script>
       <script src="creator_main.js"></script>
       <script src="common.js"></script>
+      <script src="login.js"></script>
 
 
     </body>
