--- a/resources/testweb/creator_overview.html
+++ b/resources/testweb/creator_overview.html
@@ -1005,6 +1005,7 @@
       <script src="creatorpage.js"></script>
       <script src="creator_overview.js"></script>
       <script src="common.js"></script>
+<script src="login.js"></script>
 
 
     </body>
