--- a/resources/testweb/creator_pieces.html
+++ b/resources/testweb/creator_pieces.html
@@ -942,6 +942,7 @@
       <script src="creatorpage.js"></script>
       <script src="creator_pieces.js"></script>
       <script src="common.js"></script>
+<script src="login.js"></script>
 
 
     </body>
