--- a/resources/testweb/creator_pricing.html
+++ b/resources/testweb/creator_pricing.html
@@ -857,6 +857,7 @@
       <script src="creatorpage.js"></script>
       <script src="creator_pricing.js"></script>
       <script src="common.js"></script>
+<script src="login.js"></script>
 
 
     </body>
