--- a/resources/testweb/creator_rewards.html
+++ b/resources/testweb/creator_rewards.html
@@ -895,6 +895,7 @@
       <script src="creatorpage.js"></script>
       <script src="creator_rewards.js"></script>
       <script src="common.js"></script>
+<script src="login.js"></script>
 
 
     </body>
