--- a/resources/testweb/creator_settings.html
+++ b/resources/testweb/creator_settings.html
@@ -300,6 +300,7 @@
       <script src="creatorpage.js"></script>
       <script src="userdashboard_settings.js"></script>
       <script src="common.js"></script>
+<script src="login.js"></script>
 
 
     </body>
