--- a/resources/testweb/creatordashboard.html
+++ b/resources/testweb/creatordashboard.html
@@ -312,6 +312,7 @@
       <script src="tools.js"></script>
       <script src="userdashboard.js"></script>
       <script src="common.js"></script>
+<script src="login.js"></script>
 
     </body>
     </html>
