--- a/resources/testweb/creatordashboardcustomize.html
+++ b/resources/testweb/creatordashboardcustomize.html
@@ -169,6 +169,7 @@
       <script src="tools.js"></script>
       <script src="userdashboard.js"></script>
       <script src="common.js"></script>
+<script src="login.js"></script>
       <script src="creatordashboardcustomize.js"></script>
 
     </body>
