--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -239,6 +239,7 @@
       <script src="userdashboard.js"></script>
       <script src="discover.js"></script>
       <script src="common.js"></script>
+<script src="login.js"></script>
 
     </body>
     </html>
