--- a/resources/testweb/userdashboard_overview.html
+++ b/resources/testweb/userdashboard_overview.html
@@ -572,6 +572,7 @@
       <script src="userdashboard.js"></script>
       <script src="userdashboard_overview.js"></script>
       <script src="common.js"></script>
+<script src="login.js"></script>
 
     </body>
     </html>
