--- a/resources/testweb/userdashboard_settings.html
+++ b/resources/testweb/userdashboard_settings.html
@@ -380,6 +380,7 @@
       <script src="userdashboard.js"></script>
       <script src="userdashboard_settings.js"></script>
       <script src="common.js"></script>
+<script src="login.js"></script>
 
     </body>
     </html>
