--- a/resources/testweb/404.html
+++ b/resources/testweb/404.html
@@ -181,6 +181,7 @@
       <script src="highcharts_templates.js"></script>
       
       <script src="common.js"></script>
+<script src="login.js"></script>
 
 
     </body>
