--- a/resources/testweb/contact.html
+++ b/resources/testweb/contact.html
@@ -196,6 +196,7 @@
       <script src="highcharts_templates.js"></script>
       
       <script src="common.js"></script>
+<script src="login.js"></script>
 
 
     </body>
