--- a/resources/testweb/creator_worth.html
+++ b/resources/testweb/creator_worth.html
@@ -855,6 +855,7 @@
       <script src="creatorpage.js"></script>
       <script src="creator_worth.js"></script>
       <script src="common.js"></script>
+<script src="login.js"></script>
 
 
     </body>
