--- a/resources/testweb/userdashboard_pieces.html
+++ b/resources/testweb/userdashboard_pieces.html
@@ -256,6 +256,7 @@
       <script src="highcharts_templates.js"></script>
       <script src="userdashboard.js"></script>
       <script src="common.js"></script>
+<script src="login.js"></script>
       <script src="userdashboard_pieces.js"></script>
 
     </body>
