--- a/resources/testweb/userdashboard_prices.html
+++ b/resources/testweb/userdashboard_prices.html
@@ -202,6 +202,7 @@
       <script src="highcharts_templates.js"></script>
       <script src="userdashboard.js"></script>
       <script src="common.js"></script>
+<script src="login.js"></script>
       <script src="userdashboard_prices.js"></script>
 
     </body>
