--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -532,6 +532,7 @@
 </div>
 </div>
 </div>
+<!-- end of login modal -->
 
 <div id="userDisclaimerModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog">
