need to add the disclaimers now

--- a/resources/testweb/creator_overview.html
+++ b/resources/testweb/creator_overview.html
@@ -506,11 +506,12 @@
   <div class="modal-dialog">
 
     <div class="modal-content">
-      <div class="modal-header">
+            <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        <h4 class="modal-title">Deposit</h4>
       </div>
       <div id="deposit_div" class="modal-body">
         <form id="depositForm" class="form-horizontal" role="form">
+          This is a fake deposit form: type in any amount you like.
           <div class="form-group form-group-lg">
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Amount</label>
             <div class="col-sm-10">
@@ -529,13 +530,13 @@
           </div>
 
 
-          <button id="placedepositBtn" type="submit" class="btn btn-primary">Deposit</button>
+         <button id="placedepositBtn" type="submit" class="btn btn-primary">Deposit</button>
 
-        </form>
-      </div>
-
+       </form>
     </div>
+
   </div>
+</div>
 </div>
 <div id="askModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -707,17 +708,16 @@
    </div>
  </div>
 </div>
-
 <div id="withdrawModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog">
 
     <div class="modal-content">
-      <div class="modal-header">
+            <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        <h4 class="modal-title">withdraw</h4>
       </div>
       <div class="modal-body">
-        Make sure your creator safety after withdrawal doesn't go below 5, or you will be labeled as <b> unsafe </b>.
-        <br>
+      Make sure your creator safety after withdrawal doesn't go below 5, or you will be labeled as <b> unsafe </b>.
+      <br>
         <form id="withdrawForm" class="form-horizontal" role="form">
           <div class="form-group form-group-lg">
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Amount</label>
