--- a/resources/web/creatordashboard.html
+++ b/resources/web/creatordashboard.html
@@ -11,7 +11,7 @@
   <title>Bitpieces</title>
 
   <!-- favicon -->
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="https://bitpieces.com/favicon.ico" type="image/x-icon" />
 
   <!-- Bootstrap core CSS -->
   <link href="united.bootstrap.css" rel="stylesheet">
@@ -312,6 +312,7 @@
       <script src="tools.js"></script>
       <script src="userdashboard.js"></script>
       <script src="common.js"></script>
+<script src="login.js"></script>
 
     </body>
     </html>
