--- a/resources/web/creator_settings.html
+++ b/resources/web/creator_settings.html
@@ -10,7 +10,7 @@
 	<title>Bitpieces</title>
 
     <!-- favicon -->
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="https://bitpieces.com/favicon.ico" type="image/x-icon" />
 
 	<!-- Bootstrap core CSS -->
 	<link href="united.bootstrap.css" rel="stylesheet">
@@ -78,7 +78,7 @@
         <li><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
                <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
                <li><a href="#logout" class="hide">Log Out</a></li> -->
-              <li class="dropdown">
+        <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="/about">About Bitpieces</a></li>
@@ -300,6 +300,7 @@
       <script src="creatorpage.js"></script>
       <script src="userdashboard_settings.js"></script>
       <script src="common.js"></script>
+<script src="login.js"></script>
 
 
     </body>
