--- a/resources/web/landing.html
+++ b/resources/web/landing.html
@@ -12,7 +12,7 @@
   <title>Bitpieces</title>
 
   <!-- favicon -->
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="https://bitpieces.com/favicon.ico" type="image/x-icon" />
 
   <!-- Bootstrap core CSS -->
   <link href="united.bootstrap.css" rel="stylesheet">
@@ -51,7 +51,7 @@
   ================================================== -->
   <body class="carousel-body" >
     <!-- plug into here -->
-    <nav class="navbar navbar-default" role="navigation">
+     <nav class="navbar navbar-default" role="navigation">
      <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -376,7 +376,7 @@
 
                       <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
-                          <button id="signinBtn" type="submit" class="btn btn-primary">Sign in</button>
+                          <button id="signinBtn" type="submit" class="btn btn-primary" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>">Sign in</button>
                         </div>
                       </div>
                     </form>
@@ -532,6 +532,7 @@
 </div>
 </div>
 </div>
+<!-- end of login modal -->
 
 <div id="userDisclaimerModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -610,7 +611,6 @@
       </div>
     </div>
   </form>
-
 </div>
 </div>
 </div>
