--- a/resources/web/userdashboard_pieces.html
+++ b/resources/web/userdashboard_pieces.html
@@ -11,7 +11,7 @@
   <title>Bitpieces</title>
 
   <!-- favicon -->
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="https://bitpieces.com/favicon.ico" type="image/x-icon" />
 
   <!-- Bootstrap core CSS -->
   <link href="united.bootstrap.css" rel="stylesheet">
@@ -55,68 +55,63 @@
 
        <!-- plug into here -->
        <nav class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">BitPieces</a>
-          </div>
+     <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">BitPieces</a>
+    </div>
 
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-             <li><a href="/">Home</a></li>
-             <li><a href="/discover">Discover</a></li>
-             <li><a href="/creators_register">Creators</a></li> 
-             <li class="active"><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
-               <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
-               <li><a href="#logout" class="hide">Log Out</a></li> -->
-               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><a href="/about">About Bitpieces</a></li>
-                  <li><a href="/FAQ">Frequently Asked Questions</a></li>
-                  <li><a href="/contact">Contact</a></li>
-                  
-
-                </ul>
-              </li>
-            </ul>
-            <form id="creator_search" class="navbar-form navbar-left navbar-input-group" role="search">
-              <div class="form-group">
-               <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
-             </div>
-             <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
-           </form>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+     <ul class="nav navbar-nav">
+      <li class="active"><a href="/">Home</a></li>
+      <li><a href="/discover">Discover</a></li>
+      <li><a href="/creators_register">Creators</a></li> 
+      <li><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a href="/about">About Bitpieces</a></li>
+          <li><a href="/FAQ">Frequently Asked Questions</a></li>
+          <li><a href="/contact">Contact</a></li>
 
 
-           <ul class="nav navbar-nav navbar-right">
+        </ul>
+      </li>
+    </ul>
+    <form id="creator_search" class="navbar-form navbar-left navbar-input-group" role="search">
+      <div class="form-group">
+       <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
+     </div>
+     <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
+   </form>
 
 
+   <ul class="nav navbar-nav navbar-right">
+    <li id="userDropdown" class="dropdown user-dropdown">
+      <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
+      <script id="usernameTemplate" type="x-tmpl-mustache">  
+       <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
 
-            <li id="userDropdown" class="dropdown user-dropdown">
 
-             <script id="usernameTemplate" type="x-tmpl-mustache">  
-               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
+       <ul class="dropdown-menu">
+         <li><a id="settings" href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
+         <li class="divider"></li>
+         <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
 
-
-               <ul class="dropdown-menu">
-                 <li><a id="settings" href="userdashboard_settings" rel="keep-params"><i class="fa fa-gear"></i> Settings</a></li>
-                 <li class="divider"></li>
-                 <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
-
-               </ul>
-             </script>
-           </li>
-         </ul>
-       </div><!-- /.navbar-collapse -->
-     </div><!-- /.container-fluid -->
-   </nav>
+       </ul>
+     </script>
+   </li>
+ </ul>
+</div><!-- /.navbar-collapse -->
+</div><!-- /.container-fluid -->
+</nav>
 
    <!-- The full page with teh sidebar -->
    <div class="container-fluid">
@@ -230,7 +225,322 @@
         <!-- end of page -->
       </div>
 
+<!-- Login Modal -->
 
+            <div class="modal fade bs-example-modal-lg" id="userloginModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="userloginModalLabel">Sign in or Register</h4>
+                  </div>
+
+                  <div class="modal-body">
+
+                    <h3> Sign in &nbsp;&nbsp;&nbsp; 
+                      <small> <a href="#" data-toggle="modal" data-target="#recoverPasswordModal">Recover password </a> </small></h3>
+
+                      <form id="loginForm" class="form-horizontal" role="form">
+                        <div id="userLoginDiv" class="form-group">
+                          <label for="inputUsername3" class="col-sm-2 control-label">Username</label>
+                          <div class="col-sm-10">
+                            <input name="username" type="Username" class="form-control" id="inputUsername3" placeholder="Username or Email"
+                            data-bv-message="The username is not valid"
+
+                            data-bv-notempty="true"
+                            data-bv-notempty-message="The username is required and cannot be empty"
+
+                            data-bv-regexp="true"
+                            data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+                            data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
+
+                            data-bv-stringlength="true"
+                            data-bv-stringlength-min="3"
+                            data-bv-stringlength-max="30"
+                            data-bv-stringlength-message="The username must be more than 3 and less than 30 characters long"
+
+                            >
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                          <div class="col-sm-10">
+                            <input name="password" type="password" class="form-control" id="inputPassword3" placeholder="Password"
+
+                            data-bv-notempty="true"
+                            data-bv-notempty-message="The password is required and cannot be empty"
+
+                            data-bv-different="true"
+                            data-bv-different-field="username"
+                            data-bv-different-message="The password cannot be the same as username" 
+                            >
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <div class="col-sm-offset-2 col-sm-10">
+                            <div class="checkbox">
+                              <label>
+                                <input name="remember" type="checkbox"> Remember me
+                              </label>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <div class="col-sm-offset-2 col-sm-10">
+                            <div class="checkbox">
+
+                             <label>
+                              <input name="creatorCheckbox" type="checkbox" id="creatorCheckbox" value="creator"> I'm a Creator
+                            </label>
+
+                          </div>
+                        </div>
+                      </div>
+
+
+
+
+                      <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                          <button id="signinBtn" type="submit" class="btn btn-primary" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>">Sign in</button>
+                        </div>
+                      </div>
+                    </form>
+
+                <!-- The different sign ins 
+                <table style="width:100%">
+                  <tr>
+                    <td>
+                      <a class="btn btn-primary btn-social btn-facebook">
+                        <i class="fa fa-facebook"></i> Sign in with Facebook
+                      </a>
+                    </td>
+                    <td>
+                     <a class="btn btn-primary btn-social btn-twitter">
+                      <i class="fa fa-twitter"></i> Sign in with Twitter
+                    </a>
+                  </td>
+                  <td>
+                   <a class="btn btn-primary btn-social btn-google-plus">
+                    <i class="fa fa-google-plus"></i> Sign in with Google
+                  </a>
+                </td>
+              </td>
+              <td>
+               <a class="btn btn-primary btn-social btn-reddit">
+                <i class="fa fa-reddit"></i> Sign in with Reddit
+              </a>
+            </td>
+          </tr>
+        </table>-->
+        <hr>
+        <h3> Register &nbsp;&nbsp;&nbsp; <small><a href="/creators_register">Creator register</a> </small></h3>
+
+        <form id="registerForm" class="form-horizontal" role="form"
+        data-bv-message="This value is not valid"
+        data-bv-feedbackicons-valid="glyphicon glyphicon-ok"
+        data-bv-feedbackicons-invalid="glyphicon glyphicon-remove"
+        data-bv-feedbackicons-validating="glyphicon glyphicon-refresh">
+
+        <div class="form-group">
+         <label for="inputUsername4" class="col-sm-2 control-label">Username</label>
+         <div class="col-sm-10">
+          <input name="username" type="Username" class="form-control" id="inputUsername4" placeholder="Username"
+          data-bv-message="The username is not valid"
+
+          data-bv-notempty="true"
+          data-bv-notempty-message="The username is required and cannot be empty"
+
+          data-bv-regexp="true"
+          data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+          data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
+
+          data-bv-stringlength="true"
+          data-bv-stringlength-min="3"
+          data-bv-stringlength-max="30"
+          data-bv-stringlength-message="The username must be more than 3 and less than 30 characters long"
+
+          />
+
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="inputEmail3" class="col-sm-2 control-label">Email address</label>
+        <div class="col-sm-10">
+          <input name="email" type="inputEmail3" class="form-control" id="inputEmail3" placeholder="Email"
+          data-bv-emailaddress="true"
+          data-bv-emailaddress-message="The input is not a valid email address"  
+
+          data-bv-notempty="true"
+          data-bv-notempty-message="An email is required"
+
+          />
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+        <div class="col-sm-10">
+          <input name="password" type="password" class="form-control" id="inputPassword3" placeholder="Password"
+          data-bv-notempty="true"
+          data-bv-notempty-message="The password is required and cannot be empty"
+
+          data-bv-identical="true"
+          data-bv-identical-field="verifyPassword"
+          data-bv-identical-message="The password and its confirm are not the same"
+
+          data-bv-different="true"
+          data-bv-different-field="username"
+          data-bv-different-message="The password cannot be the same as username" />
+
+
+
+        </div>
+      </div>
+      <div class="form-group">
+       <label for="inputPassword3" class="col-sm-2 control-label">Verify password</label>
+       <div class="col-sm-10">
+        <input name="verifyPassword" type="password" class="form-control" id="inputPassword3" placeholder="Verify Password"
+        data-bv-notempty="true"
+        data-bv-notempty-message="The confirm password is required and cannot be empty"
+
+        data-bv-identical="true"
+        data-bv-identical-field="password"
+        data-bv-identical-message="The password and its confirm are not the same"
+
+        data-bv-different="true"
+        data-bv-different-field="username"
+        data-bv-different-message="The password cannot be the same as username" />
+
+
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <div class="checkbox">
+          <label>
+            <input name="remember" type="checkbox"> Remember me
+          </label>
+        </div>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <div class="checkbox">
+          <label>
+            <input name="terms" type="checkbox"
+            data-bv-notempty="true"
+            data-bv-notempty-message="You must accept the terms and conditions"
+
+
+            > 
+            <a href="#" data-toggle="modal" data-target="#userDisclaimerModal">I accept these terms and conditions </a>
+          </label>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div id="recaptcha_div" class="col-sm-offset-2 col-sm-10"> </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <button id="registerBtn" type="submit" class="btn btn-primary">Register</button>
+      </div>
+    </div>
+  </form>
+
+
+
+</div>
+
+</div>
+</div>
+</div>
+<!-- end of login modal -->
+
+<div id="userDisclaimerModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        <h4 class="modal-title">Disclaimer</h4>
+      </div>
+      <div class="modal-body">
+        <div class="text">
+         <ul>
+          <li>All transactions are performed in BTC, using currency conversions updated every 15 minutes from https://bitcoinaverage.com/ </li>
+          <li>Bitpieces does not guarantee the value of your pieces. </li>
+          <li>Bitpieces does not guarantee that a creator has the funds to pay rewards. Buying pieces is a contract between you and the creator. Read about creator safety 
+          <a href='/FAQ#how_do_i_know_if_a_creator_is_safe'>here</a>. </li>
+          <li>Legal action must be taken against the creator directly, if they fail to provide you with rewards, or if the value of their pieces decreases dramatically. </li>
+          <li> Your bitcoin wallet may charge you a small fee for making a deposit. </li>
+        </ul>
+      </div>
+
+
+    </div> 
+    <div class="modal-footer">
+     <button type="button" class="btn btn-primary" data-dismiss="modal">Okay, I accept</button>
+   </div>
+
+   </div>
+ </div>
+</div>
+
+<div id="recoverPasswordModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        
+        <h4 class="modal-title">Recover Password</h4>
+      </div>
+      <div class="modal-body">
+        <div class="text">
+         Enter your username below to receive your login information
+       </br>
+     </div>
+     <form id="recoverPasswordForm" class="form-horizontal" role="form"
+     data-bv-message="This value is not valid"
+     data-bv-feedbackicons-valid="glyphicon glyphicon-ok"
+     data-bv-feedbackicons-invalid="glyphicon glyphicon-remove"
+     data-bv-feedbackicons-validating="glyphicon glyphicon-refresh">
+
+     <div class="form-group">
+       <label for="inputUsername4" class="col-sm-2 control-label">Username</label>
+       <div class="col-sm-10">
+        <input name="username" type="Username" class="form-control" id="inputUsername4" placeholder="Username or Email"
+        data-bv-message="The username is not valid"
+
+        data-bv-notempty="true"
+        data-bv-notempty-message="The username is required and cannot be empty"
+
+        data-bv-regexp="true"
+        data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+        data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
+
+        data-bv-stringlength="true"
+        data-bv-stringlength-min="3"
+        data-bv-stringlength-max="30"
+        data-bv-stringlength-message="The username must be more than 3 and less than 30 characters long"
+
+        />
+
+
+      </div> 
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <button id="recoverPasswordBtn" type="submit" class="btn btn-primary">Email me</button>
+      </div>
+    </div>
+  </form>
+</div>
+</div>
+</div>
+</div>
       <!-- end of wrapper -->
     </div>
 
@@ -256,6 +566,7 @@
       <script src="highcharts_templates.js"></script>
       <script src="userdashboard.js"></script>
       <script src="common.js"></script>
+<script src="login.js"></script>
       <script src="userdashboard_pieces.js"></script>
 
     </body>
