fixing the discover page login

--- a/resources/web/discover.html
+++ b/resources/web/discover.html
@@ -11,7 +11,7 @@
   <title>Bitpieces</title>
 
   <!-- favicon -->
-  <link rel="shortcut icon" href="https://bitpieces.com/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
   <!-- Bootstrap core CSS -->
   <link href="united.bootstrap.css" rel="stylesheet">
@@ -206,6 +206,12 @@
 
 
       </div>
+
+
+      
+      <!-- end of wrapper -->
+    </div>
+  </div>
 
 <!-- Login Modal -->
 
@@ -523,12 +529,6 @@
 </div>
 </div>
 </div>
-      
-      <!-- end of wrapper -->
-    </div>
-  </div>
-
-
 
 
       <!-- Bootstrap core JavaScript
