adding verified to discover fields

--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -170,6 +170,7 @@
                       <th>Reward/piece/year <i class="fa fa-sort"></th>
                       <th>Reward yield <i class="fa fa-sort"></th>
                       <th>Creators safety <i class="fa fa-sort"></th>
+                      <th>Verified <i class="fa fa-sort"></th>
                     </tr>
                   </thead>
 
@@ -185,7 +186,7 @@
                       <td>{{price_current}}</td>
                       <td>{{reward_current}}</td>
                       <td>{{reward_yield_current}}</td>
-                      <td>{{creators_safety}}</td>
+                      <td>{{verified}}</td>
                     </tr>
                     {{/.}}
 
