--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -186,6 +186,7 @@
                       <td>{{price_current}}</td>
                       <td>{{reward_current}}</td>
                       <td>{{reward_yield_current}}</td>
+                      <td>{{creators_safety}}</td>
                       <td>{{verified}}</td>
                     </tr>
                     {{/.}}
