--- a/resources/testweb/userdashboard_overview.html
+++ b/resources/testweb/userdashboard_overview.html
@@ -431,13 +431,13 @@
     <!-- FOOTER -->
     <hr class="featurette-divider">
        <footer>
-      <p class="pull-right"><a href="#">Back to top</a></p>
-      <p>&copy; 2014 Bitpieces, Inc. &middot; 
-<a href="/about">About</a> &middot; 
-<a href="/contact">Contact</a> &middot; 
-<a href="/FAQ">Support</a> &middot; 
-<a href="https://github.com/tchoulihan/bitpieces">Github</a>
-</p>
+  <p>&copy; 2014 Bitpieces, Inc. &middot; 
+    <a href="/about">About</a> &middot; 
+    <a href="/contact">Contact</a> &middot; 
+    <a href="/FAQ">Support</a> &middot; 
+    <a href="https://github.com/tchoulihan/bitpieces"><i class="fa fa-github"></i></a>
+    <a href="https://twitter.com/Bitpieces"><i class="fa fa-twitter"></i></a>
+  </p>
       </footer>
       
     </div>
