--- a/resources/web/creators_register.html
+++ b/resources/web/creators_register.html
@@ -763,7 +763,8 @@
     <a href="/about">About</a> &middot; 
     <a href="/contact">Contact</a> &middot; 
     <a href="/FAQ">Support</a> &middot; 
-    <a href="https://github.com/tchoulihan/bitpieces">Github</a>
+    <a href="https://github.com/tchoulihan/bitpieces"><i class="fa fa-github"></i></a>
+    <a href="https://twitter.com/Bitpieces"><i class="fa fa-twitter"></i></a>
   </p>
 </footer>
 
