--- a/resources/web/creator_pricing.html
+++ b/resources/web/creator_pricing.html
@@ -133,7 +133,7 @@
          <span class="badge" id="slide-submenu"><i class="fa fa-times"></i></span>
        </li>
        <a class="list-group-item" href="/creators/main" rel="keep-params"><i class="fa fa-bar-chart-o fa-fw"></i> &nbsp; Main</a>
-       <a class="list-group-item active" href="/creators/pricing" rel="keep-params"><i class="fa fa-money"></i> Price</a>
+       <a class="list-group-item active" href="/creators/pricing" rel="keep-params"><i class="fa fa-money fa-fw"></i> &nbsp; Price</a>
        <a class="list-group-item" href="/creators/worth" rel="keep-params"><i class="fa fa-building-o fa-fw"></i> &nbsp; Worth</a>
        <a class="list-group-item" href="/creators/rewards" rel="keep-params"><i class="fa fa-trophy fa-fw"></i> &nbsp; Rewards</a>
        <a class="list-group-item" href="/creators/funds" rel="keep-params"><i class="fa fa-bank fa-fw"></i> &nbsp; Funds</a>
