fixed width fa on users pages now

--- a/resources/testweb/userdashboard_prices.html
+++ b/resources/testweb/userdashboard_prices.html
@@ -124,13 +124,13 @@
         </div>
         <div class="list-group">
           <li class="list-group-item">
-            <a href="/users/overview" rel="keep-params"><i class="fa fa-dashboard"></i> Overview</a>
+            <a href="/users/overview" rel="keep-params"><i class="fa fa-dashboard fa-fw"></i> &nbsp; Overview</a>
             <span class="badge" id="slide-submenu"><i class="fa fa-times"></i></span>
           </li>
 
-          <a class="list-group-item" href="/users/funds" rel="keep-params"><i class="fa fa-bank"></i> Funds</a>
-          <a class="list-group-item" href="/users/pieces" rel="keep-params"><i class="fa fa-cubes"></i> Pieces</a>
-          <a class="list-group-item active" href="/users/prices" rel="keep-params"><i class="fa fa-dollar"></i> Prices</a>
+          <a class="list-group-item" href="/users/funds" rel="keep-params"><i class="fa fa-bank fa-fw"></i> &nbsp; Funds</a>
+          <a class="list-group-item" href="/users/pieces" rel="keep-params"><i class="fa fa-cubes fa-fw"></i> &nbsp; Pieces</a>
+          <a class="list-group-item active" href="/users/prices" rel="keep-params"><i class="fa fa-dollar fa-fw"></i> &nbsp; Prices</a>
         </div>
       </div>        
     </div>
@@ -142,7 +142,7 @@
         <div class="col-lg-12">
           <h1> <span id="page_title"></span> <small> price history</small> </h1> 
           <ol class="breadcrumb">
-            <li><a href="/users/overview" rel="keep-params"><i class="fa fa-dashboard"></i> Overview</a></li>
+            <li><a href="/users/overview" rel="keep-params"><i class="fa fa-dashboard fa-fw"></i> &nbsp; Overview</a></li>
             <li class="active"><i class="fa fa-table"></i> Prices</li>
           </ol>
         </div>
