--- a/resources/web/FAQ.html
+++ b/resources/web/FAQ.html
@@ -250,7 +250,8 @@
           to buy or sell their pieces on an open market. The new owners of pieces then automatically start generating the rewards attached
           to those pieces.
 
-          If a creator finds that they aren't generating enough profits to sustainably pay rewards, they should notify their funders, and 
+          If a creator finds that they aren't generating enough profits to sustainably pay rewards, they should notify their funders, and decrease 
+          their reward.
            
           
 
