smaller login modal

--- a/resources/testweb/creator_pieces.html
+++ b/resources/testweb/creator_pieces.html
@@ -921,7 +921,7 @@
 <!-- Login Modal -->
 
             <div class="modal fade bs-example-modal-lg" id="userloginModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-              <div class="modal-dialog modal-lg">
+              <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
